<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.demotxt.myapp.Quickmart.activity.DirectCheckout_Activity">

    <LinearLayout
        android:id="@+id/linearLayout6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:orientation="vertical"
        android:layout_marginTop="16dp"
        android:padding="8dp">

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/colorPrimary"
            android:padding="8dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/contactDetail"
            android:textAppearance="@style/TextAppearance.AppCompat.Caption"
            android:textColor="@color/profiletext"
            android:textStyle="bold"
            app:fontFamily="sans-serif-medium" />


        <EditText
            android:id="@+id/name"
            style="@style/EditText.Flat.Grey"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_medium"
            android:background="@drawable/edit_text_round_bg_outline"
            android:hint="@string/default_your_name"
            android:minHeight="@dimen/spacing_xmlarge"
            android:layout_marginBottom="4dp"/>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/shippingAdd"
            android:textAppearance="@style/TextAppearance.AppCompat.Caption"
            android:textColor="@color/profiletext"
            android:textStyle="bold"
            app:fontFamily="sans-serif-medium" />


        <EditText
            android:id="@+id/address"
            style="@style/EditText.Flat.Grey"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_medium"
            android:background="@drawable/edit_text_round_bg_outline"
            android:hint="@string/default_your_address"
            android:minHeight="@dimen/spacing_xmlarge"
            android:layout_marginBottom="4dp"/>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pref_title_phone"
            android:textAppearance="@style/TextAppearance.AppCompat.Caption"
            android:textColor="@color/profiletext"
            android:textStyle="bold"
            app:fontFamily="sans-serif-medium" />


        <EditText
            android:id="@+id/phoneNumber"
            style="@style/EditText.Flat.Grey"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_medium"
            android:background="@drawable/edit_text_round_bg_outline"
            android:hint="@string/default_your_phone"
            android:minHeight="@dimen/spacing_xmlarge"
            android:layout_marginBottom="4dp"/>


        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/colorPrimary"/>




    </LinearLayout>

    <include
        android:id="@+id/include"
        layout="@layout/cart_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout6"
        app:layout_constraintVertical_bias="0.04000002" />

    <LinearLayout
        android:id="@+id/linearLayout7"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="4dp"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/include">

        <RadioButton
            android:id="@+id/Cod_Rd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/cash_on_dilivery"
            android:textColor="@color/profiletext"
            android:textSize="15dp" />

        <RadioButton
            android:id="@+id/card_Rd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:enabled="false"
            android:text="@string/pay_with_card"
            android:textColor="@color/disabletext"
            android:textSize="15dp" />
    </LinearLayout>


    <Button
        android:id="@+id/ConfirmBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@drawable/button_border"
        android:backgroundTint="@color/buttonbg"
        android:text="@string/Done"
        android:textColor="@color/navbartext"
        android:textSize="18dp"
        android:padding="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout7" />














</androidx.constraintlayout.widget.ConstraintLayout>