<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <LinearLayout
        android:id="@+id/shipline"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical"
        android:padding="@dimen/spacing_large"
        android:layout_gravity="center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/contactdetail"
            android:textAppearance="@style/TextAppearance.AppCompat.Caption"
            android:textColor="@color/grey_40"
            android:textStyle="bold"
            app:fontFamily="sans-serif-medium" />
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tipname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <EditText
            android:id="@+id/nameShip"
            style="@style/EditText.Flat.Grey"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_large"
            android:background="@drawable/edit_text_round_bg_outline"
            android:hint="@string/default_your_name"
            android:minHeight="@dimen/spacing_xmlarge" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tipemail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        <EditText
            android:id="@+id/emailShip"
            style="@style/EditText.Flat.Grey"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_middle"
            android:background="@drawable/edit_text_round_bg_outline"
            android:hint="@string/default_your_email"
            android:minHeight="@dimen/spacing_xmlarge" />
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tipcontact"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        <EditText
            android:id="@+id/contactShip"
            style="@style/EditText.Flat.Grey"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_middle"
            android:background="@drawable/edit_text_round_bg_outline"
            android:hint="@string/default_your_phone"
            android:minHeight="@dimen/spacing_xmlarge" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_large"
            android:text="@string/shippingAdd"
            android:textAppearance="@style/TextAppearance.AppCompat.Caption"
            android:textColor="@color/grey_40"
            android:textStyle="bold"
            app:fontFamily="sans-serif-medium" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tipaddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        <EditText
            android:id="@+id/addShip"
            style="@style/EditText.Flat.Grey"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_large"
            android:background="@drawable/edit_text_round_bg_outline"
            android:hint="@string/default_your_address"
            android:minHeight="@dimen/spacing_xmlarge" />
        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_middle"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/country"
                style="@style/EditText.Flat.Grey"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/edit_text_round_bg_outline"
                android:minHeight="@dimen/spacing_xmlarge"
                android:text="PAKISTAN"
                android:textColor="@color/Tex" />

            <View
                android:layout_width="@dimen/spacing_middle"
                android:layout_height="0dp" />

            <EditText
                android:id="@+id/zipShip"
                style="@style/EditText.Flat.Grey"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/edit_text_round_bg_outline"
                android:hint="@string/hint_of_zipcode"

                android:minHeight="@dimen/spacing_xmlarge" />

        </LinearLayout>

        <Spinner
            style="@style/EditText.Flat.Grey"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_middle"
            android:background="@drawable/edit_text_round_bg_outline"
            android:minHeight="@dimen/spacing_xmlarge"
            android:entries="@array/city"/>

        <EditText
            android:id="@+id/stateShip"
            style="@style/EditText.Flat.Grey"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_middle"

            android:background="@drawable/edit_text_round_bg_outline"
            android:hint="@string/hint_of_province"
            android:minHeight="@dimen/spacing_xmlarge" />

        <TextView
            android:id="@+id/textView25"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
             />
        <RadioButton
            android:id="@+id/radioButton1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cash_on_dilivery"
            android:textSize="15dp"/>
        <RadioButton
            android:id="@+id/radioButton2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pay_with_card"
            android:textSize="15dp"/>


        <Button
            android:id="@+id/button1"
            android:layout_width="150dp"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_marginTop="25dp"
            android:background="@color/colorAccent"
            android:text="@string/Done"
            android:textColor="@color/white"
            android:textSize="25dp"
            android:textStyle="bold" />

    </LinearLayout>

</androidx.core.widget.NestedScrollView>