<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.User_Detail_Activity">


    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/gradient2"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <include layout="@layout/toolbarprof" />

        <EditText
            android:id="@+id/YourName"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_margin="4dp"
            android:text="@string/default_your_name" />

        <EditText
            android:id="@+id/YourAddress"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_margin="4dp"
            android:text="@string/default_your_address" />

        <EditText
            android:id="@+id/YourPhone"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_margin="4dp"
            android:text="@string/default_your_phone" />

        <EditText
            android:id="@+id/YourEmail"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_margin="4dp"
            android:text="@string/default_your_email" />

        <EditText
            android:id="@+id/YourPass"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_margin="4dp"
            android:text="Your password" />

        <EditText
            android:id="@+id/YourPassConfirm"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_margin="4dp"
            android:text="Confirm password" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="140dp">


            <Button
                android:id="@+id/Cancel_Btn"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_marginStart="80dp"
                android:layout_centerVertical="true"
                android:text="Cancel" />

            <Button
                android:id="@+id/Confirm_Btn"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="80dp"
                android:layout_marginBottom="7dp"
                android:layout_centerVertical="true"
                android:text="@string/Confirm" />


        </RelativeLayout>

    </LinearLayout>



</androidx.constraintlayout.widget.ConstraintLayout>