<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical"
        android:padding="@dimen/spacing_large">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/contactdetail"
            android:textAppearance="@style/TextAppearance.AppCompat.Caption"
            android:textColor="@color/grey_40"
            app:fontFamily="sans-serif-medium" />

        <EditText
            style="@style/EditText.Flat.Grey"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_large"
            android:background="@drawable/edit_text_round_bg_outline"
            android:hint="@string/default_your_name"
            android:minHeight="@dimen/spacing_xmlarge" />

        <EditText
            style="@style/EditText.Flat.Grey"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_middle"
            android:background="@drawable/edit_text_round_bg_outline"
            android:hint="@string/default_your_email"
            android:minHeight="@dimen/spacing_xmlarge" />

        <EditText
            style="@style/EditText.Flat.Grey"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_middle"
            android:background="@drawable/edit_text_round_bg_outline"
            android:hint="@string/default_your_phone"
            android:minHeight="@dimen/spacing_xmlarge" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_large"
            android:text="@string/shippingAdd"
            android:textAppearance="@style/TextAppearance.AppCompat.Caption"
            android:textColor="@color/grey_40"
            app:fontFamily="sans-serif-medium" />

        <EditText
            style="@style/EditText.Flat.Grey"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_large"
            android:background="@drawable/edit_text_round_bg_outline"
            android:hint="@string/default_your_address"
            android:minHeight="@dimen/spacing_xmlarge" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_middle"
            android:orientation="horizontal">

            <EditText
                style="@style/EditText.Flat.Grey"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/edit_text_round_bg_outline"
                android:hint="Country"
                android:drawableEnd="@drawable/ic_expand_arrow"
                android:drawableRight="@drawable/ic_expand_arrow"
                android:minHeight="@dimen/spacing_xmlarge" />

            <View
                android:layout_width="@dimen/spacing_middle"
                android:layout_height="0dp" />

            <EditText
                style="@style/EditText.Flat.Grey"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/edit_text_round_bg_outline"
                android:hint="ZIP Code"
                android:text="41071"
                android:minHeight="@dimen/spacing_xmlarge" />

        </LinearLayout>

        <EditText
            style="@style/EditText.Flat.Grey"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_middle"
            android:drawableEnd="@drawable/ic_expand_arrow"
            android:drawableRight="@drawable/ic_expand_arrow"
            android:background="@drawable/edit_text_round_bg_outline"
            android:hint="City"
            android:text="Newport"
            android:minHeight="@dimen/spacing_xmlarge" />

        <EditText
            style="@style/EditText.Flat.Grey"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_middle"
            android:drawableEnd="@drawable/ic_expand_arrow"
            android:drawableRight="@drawable/ic_expand_arrow"
            android:background="@drawable/edit_text_round_bg_outline"
            android:hint="State / Province"
            android:text="Kentucky"
            android:minHeight="@dimen/spacing_xmlarge" />

    </LinearLayout>

</androidx.core.widget.NestedScrollView>